--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Livedoc | Landing, Responsive &amp; Business Templatee</title>
+    <title>Smiley Optical Services</title>
 
 
     <!-- ===============================================-->
@@ -45,9 +45,9 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="#about">About Us</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#departments">Departments</a></li>
+              <!--li class="nav-item px-2"><a class="nav-link" href="#departments">Departments</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Membership</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li-->
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="#!">Sign In</a>
           </div>
@@ -98,7 +98,7 @@
       <!-- <section> begin ============================-->
       <section class="py-0">
 
-        <div class="container">
+        <!--div class="container">
           <div class="row py-5 align-items-center justify-content-center justify-content-lg-evenly">
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
@@ -106,7 +106,7 @@
                     <p class="fs-1 fs-xxl-2 text-center">Neurology</p>
                   </a></div>
               </div>
-            </div>
+        </div-->
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="assets/img/icons/eye-care.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/eye-care.svg" alt="..." />
@@ -114,34 +114,34 @@
                   </a></div>
               </div>
             </div>
-            <div class="col-auto col-md-4 col-lg-auto text-xl-start">
+            <!--div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="assets/img/icons/cardiac.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/cardiac.svg" alt="..." />
                     <p class="fs-1 fs-xxl-2 text-center">Cardiac care</p>
                   </a></div>
               </div>
-            </div>
-            <div class="col-auto col-md-4 col-lg-auto text-xl-start">
+           </div-->
+            <!--div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="assets/img/icons/heart.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/heart.svg" alt="..." />
                     <p class="fs-1 fs-xxl-2 text-center">Heart care</p>
                   </a></div>
               </div>
-            </div>
-            <div class="col-auto col-md-4 col-lg-auto text-xl-start">
+           </div-->
+            <!--div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="assets/img/icons/osteoporosis.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/osteoporosis.svg" alt="..." />
                     <p class="fs-1 fs-xxl-2 text-center">Osteoporosis</p>
                   </a></div>
               </div>
-            </div>
-            <div class="col-auto col-md-4 col-lg-auto text-xl-start">
+          </div-->
+            <!--div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="assets/img/icons/ent.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/ent.svg" alt="..." />
                     <p class="fs-1 fs-xxl-2 text-center">ENT</p>
                   </a></div>
               </div>
-            </div>
+      </div-->
           </div>
         </div>
         <!-- end of .container-->
@@ -222,7 +222,7 @@
               </div>
               <!--/.bg-holder-->
 
-              <h1 class="text-center">OUR DOCTORS</h1>
+              <h1 class="text-center">OUR PRODUCTS</h1>
             </div>
           </div>
         </div>
@@ -546,7 +546,7 @@
               </div>
               <!--/.bg-holder-->
 
-              <h1 class="text-center">RECENT BLOGPOSTS</h1>
+              <h1 class="text-center">PRODUCTS</h1>
             </div>
           </div>
         </div>
