--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
         <div class="container">
           <div class="row min-vh-xl-100 min-vh-xxl-25">
-            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.png" alt="hero-header" /></div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/gallery/hero.JPG" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
               <h1 class="fw-light font-base fs-6 fs-xxl-7"><strong style="color:green">Smiley Optical Services </strong></h1>
               <p class="fs-1 mb-5">Ready to prioritize your eye health? Schedule an appointment with our trusted team today. Our experienced optometrists and friendly staff are dedicated to providing personalized care, advanced screenings, and comprehensive eye examinations. <br>Take the first step towards optimal vision and book your appointment now. </p><a class="btn btn-lg btn-primary rounded-pill" href="#!" role="button">Make an Appointment</a>
