--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Smiley Optical Services | Premium Eye Care</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Bootstrap 5 Bundle with Popper (recommended) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9o1l5Y5nU3f5+cB8x0Wap3xY+VRt" crossorigin="anonymous"></script>
+
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
