--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- Bootstrap 5 Bundle with Popper (recommended) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9o1l5Y5nU3f5+cB8x0Wap3xY+VRt" crossorigin="anonymous"></script>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
