--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
         <img src="assets/img/gallery/logo.png" width="50" alt="logo" />
         <span>Smiley Optical Services</span>
       </a>
-      
-        <i class="fas fa-bars"></i>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
