--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JT1Lrja6LRomBYrQQzvBeE9j3/ur61A23DJP7YjvFVF9sYcbwQSYq4giykVxgR5z" crossorigin="anonymous">
+<!-- Bootstrap JS Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkJRE6tZFytY1ir5EJrC9Rv4bESyTk76vbV3fp1GZUZF8i+hNqqJ" crossorigin="anonymous"></script>
+
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
@@ -1500,5 +1505,7 @@
     // Initialize on load
     window.dispatchEvent(new Event('scroll'));
   </script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
 </body>
 </html>
