--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
             with Expert Eye Care
           </h1>
           <p class="lead text-muted mb-4">
-            Prioritize your eye health with personalized care, advanced screenings, and comprehensive eye exams — all tailored to your vision needs.
+            Prioritize your eye health with personalized care, advanced screenings, and comprehensive eye exams. All tailored to your vision needs.
           </p>
           <div class="d-flex flex-wrap gap-3">
             <a class="btn btn-primary btn-lg shadow-sm" role="button" onclick="openPopup()">Book Appointment</a>
@@ -803,7 +803,7 @@
         <div class="hero-img position-relative">
           <img src="assets/img/gallery/hero.png" class="img-fluid rounded-4 shadow" alt="Optometrist">
           <div class="badge-overlay position-absolute bg-light text-primary px-4 py-2 rounded-pill fw-semibold shadow-sm d-none d-sm-inline-block">
-  <i class="bi bi-shield-check me-2"></i> Trusted Care Since 2010
+  <i class="bi bi-shield-check me-2"></i> Trusted Care
 </div>
 
         </div>
