--- a/index.html
+++ b/index.html
@@ -784,10 +784,10 @@
       <!-- Text Content -->
       <div class="col-lg-6 mb-5 mb-lg-0">
         <div class="hero-content">
-          <h1 class="display-4 fw-bold mb-4">
-            Experience <span class="text-primary position-relative">Clear Vision</span> <br>
-            with Expert Eye Care
-          </h1>
+          <div class="badge-overlay position-absolute bg-light text-primary px-4 py-2 rounded-pill fw-semibold shadow-sm">
+  <i class="bi bi-shield-check me-2"></i> Trusted Care
+</div>
+
           <p class="lead text-muted mb-4">
             Prioritize your eye health with personalized care, advanced screenings, and comprehensive eye exams. All tailored to your vision needs.
           </p>
