--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
     <div class="row align-items-center">
       <!-- Text Content -->
       <div class="col-lg-6 mb-5 mb-lg-0">
-        <div class="hero-content">
+        <div class="hero-content position: relative" >
           <div class="badge-overlay position-absolute bg-light text-primary px-4 py-2 rounded-pill fw-semibold shadow-sm">
   <i class="bi bi-shield-check me-2"></i> Trusted Care
 </div>
