--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
             with Expert Eye Care
           </h1>
           <p class="lead text-muted mb-4">
-            Prioritize your eye health with personalized care, advanced screenings, and comprehensive eye exams — all tailored to your vision needs.
+            Prioritize your eye health with personalized care, advanced screenings, and comprehensive eye exams - all tailored to your vision needs.
           </p>
           <div class="d-flex flex-wrap gap-3">
             <a class="btn btn-primary btn-lg shadow-sm" role="button" onclick="openPopup()">Book Appointment</a>
